fixed bug overflow

--- a/public/css/_globals.scss
+++ b/public/css/_globals.scss
@@ -1,7 +1,11 @@
 html {
     font-size: 100%;
     box-sizing: border-box;
-    // overflow-x: hidden;
+    overflow-x: hidden;
+
+    @include breakpoint-down(medium){
+        overflow-x: visible;
+    }
 }
 
 *, *::before, *::after {
